@@ -19,7 +19,7 @@ Requires: python, cmake
 
 %description
 This package includes the scripts for setting up the run-time and
-development environment. This involves the main ELogin script.
+development environment. This includes the main ELogin and ERun scripts.
 
 
 %prep
