@@ -13,7 +13,7 @@ from glob import glob
 
 from string import Template
 
-__version__ = "2.1"
+__version__ = "2.1.2"
 __project__ = "EuclidEnv"
 
 
