@@ -1,3 +1,10 @@
+* Mon Feb 27 2017 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 2.1.2-1
+- hotfix of the Euclid.Run.Script module. Remove obsolete buggy part for 
+  the extra search path implemented in a searchPath.py python file.
+
+* Fri Feb 24 2017 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 2.1.1-1
+- hotfix of the Euclid.ConfigFile module.
+
 * Fri Dec 16 2016 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 2.1-1
 - update to the latest cmake library of Elements (4.1)
 - fix up many issues related to the python 3 compatibility.
